# my_protobuf_study

./: CMakeLists.txt  ChangeLog.md  README.md
idl/: lp.helloworld.pb.cc  lp.helloworld.pb.h  lp.helloworld.proto  lp.pointcloud.pb.cc  lp.pointcloud.pb.h  lp.pointcloud.proto
src/: writer.cpp
src/open_link/: reader.cpp
src/pointcloud/: reader.cpp  writer.cpp
